--- a/exportwebsite.html
+++ b/exportwebsite.html
@@ -3,11 +3,26 @@
     <title>Samsaro exports</title>
    
     <style>
-    ul{list-style-type: none;}
-li{display:inline;}
+    ul{list-style-type: none;
+        text-decoration: none;}
+     a{
+        text-decoration: none;
+    }
+li{display:inline;
+    font-size:19px;}
 div{
-margin-left:70px;
+margin-left:20px;
 
+
+}h3{
+    color:blue;
+    font-size:25px;
+}
+p{
+    font-size:19px;
+}
+body{
+    margin-left:70px;
 }
 </style>
 </head>
@@ -39,7 +54,7 @@ margin-left:70px;
                 The Samsaro Exports has Own Knitting machines, which is Mayor & Cie, Germany. It can produce around 2000 KGS of fabric per day. We can do all types of knitted fabrics as per our customer specification and style, which includes Single Jersey, Interlock, French Terry and all types of Ribs, Jackquard designs,Loop Knit, Fleece, Blended, Auto stripes.
             </p>  
             <div >
-                <img src="knit1.jpg">
+                <img src="knit1.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
                 <img src="knit2.jpg">
             </div>
             <h3>PRINTING
@@ -50,7 +65,7 @@ margin-left:70px;
                             Pigment print, Plastisol print, Discharge print, Glitter Print, Flock print, Foam print, Digital Transfer print, High Density print , etc..,
                           </p>
                           <div>
-                              <img src="print1.jpg">
+                              <img src="print1.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
                               <img src="print2.jpg">
                           </div>
                           <h3>EMBROIDERY</h3><p>
@@ -59,13 +74,13 @@ margin-left:70px;
                           The embroidery division is equipped with the latest machines from TAJIMA-(Japan Make).These automated embroidery machines elegantly handle any design with Punching ,Designing & Applique Cutting.
                         </p>
                         <div>
-                                <img src="em1.jpg">
+                                <img src="em1.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
                                 <img src="em2.jpg">
                             </div><h3>GARMENTING</h3><p>
                           The garments are manufactured in most sophisticated machines using the latest state of the art technology in our INHOUSED PRODUCTION UNIT. Our wide range of machineries include JUKI, BROTHER, PEGASUS. Our Production is the key for success which keeps us growing in this competitive industry. Our production unit is supported by 100 sewing machines.
                         </p>
                         <div>
-                                <img src="gar1.jpg">
+                                <img src="gar1.jpg">&nbsp;&nbsp;&nbsp;&nbsp;
                                 <img src="gar2.jpg">
                             </div><h3>
                               PACKING</h3><p>
